# tabnet

./: .editorconfig  .flake8  .gitatttributes  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile_gpu  LICENSE  Makefile  Osps.  README.md  census_example.ipynb  customizing_example.ipynb  cv_tabnet.ipynb  forest_example.ipynb  grid_search_example_BOHB_TabNet-V2.ipynb  grid_search_example_BOHB_XGB-V2.ipynb  hyperparameter_optimization_example.ipynb  multi_regression_example.ipynb  multi_task_example.ipynb  poetry.toml  pretraining_example.ipynb  pyproject.toml  regression_example.ipynb  regression_rossmann.ipynb  renovate.json  requirements.txt  sarcos_example.ipynb  skorch_tabnet_classifier.ipynb
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  pr-tests.yml  pythonpackage.yml  pythonpublish.yml
docs/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js
docs-scripts/: module_template.tpl  package_template.tpl  rst_generator.sh
docs-scripts/source/: conf.py  index.rst
docs-scripts/source/_static/: default.css
docs-scripts/source/_templates/: layout.html
docs/_modules/: index.html
docs/_modules/pytorch_tabnet/: abstract_model.html  augmentations.html  callbacks.html  metrics.html  multiclass_utils.html  multitask.html  pretraining.html  pretraining_utils.html  sparsemax.html  tab_model.html  tab_network.html  (+1 more)
docs/generated_docs/: README.html  docs-scripts....pytorch_tabnet.html  pytorch_tabnet.html
examples/: TabNet_binary_classification__adult_census_income.ipynb  TabNet_multi_regression__adult_census_income.ipynb  TabNet_multiclass_classification__forest_cover.ipynb  TabNet_regression__online_news_popularity.ipynb  TabNet_regression_time_series__metro_interstate_traffic_volume.ipynb
node_utils/: data.py  utils.py
pytorch_tabnet/: abstract_model.py  augmentations.py  callbacks.py  metrics.py  mix_training.py  multiclass_utils.py  multitask.py  pretraining.py  pretraining_utils.py  sparsemax.py  tab_model.py  tab_network.py  utils.py
pytorch_tabnet/tuner/: abstract_worker.py  bohb_tuner.py  tabnet_worker.py  xgb_worker.py
release-script/: Dockerfile_changelog  do-release.sh  prepare-release.sh
tabnet/: tab_network.py
tests/: test_unsupervised_loss.py  unsupervised_loss.py
tests/intg/: conftest.py  test_nb.py
(+4 files in other folders)
