[tool.poetry]
name = "pytorch_tabnet"
version = "0.1.2"
description = "PyTorch implementation of TabNet"
homepage = "https://github.com/dreamquark-ai/tabnet"
repository = "https://github.com/dreamquark-ai/tabnet"
documentation = "https://github.com/dreamquark-ai/tabnet"
readme = "README.md"
authors = []
keywords = ["tabnet", "pytorch", "neural-networks" ]
exclude = ["tabnet/*.ipynb"]

[tool.poetry.dependencies]
python = "^3.6.8"

numpy="1.17.3"
torch="1.0.1"
tqdm="4.37.0"
scikit_learn="0.21.3"

[tool.poetry.dev-dependencies]
jupyter="1.0.0"
xgboost="0.90"
matplotlib="3.1.1"
wget="3.2"
pandas="0.25.3"
flake8="3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
