[tool.poetry]
name = "pytorch_tabnet"
version = "4.1.0"
description = "PyTorch implementation of TabNet"
homepage = "https://github.com/dreamquark-ai/tabnet"
repository = "https://github.com/dreamquark-ai/tabnet"
documentation = "https://github.com/dreamquark-ai/tabnet"
readme = "README.md"
authors = []
keywords = ["tabnet", "pytorch", "neural-networks" ]
exclude = ["tabnet/*.ipynb"]

[tool.poetry.dependencies]
python = ">=3.7"

numpy=">=1.17"
torch=">=1.3"
tqdm=">=4.36"
scikit_learn=">0.21"
scipy=">1.4"

[tool.poetry.dev-dependencies]
jupyter="1.0.0"
xgboost="0.90"
matplotlib="3.1.1"
wget="3.2"
pandas="0.25.3"
flake8="3.7.9"
sphinx = "^2.2"
sphinx-rtd-theme = "0.5.0"
recommonmark = "0.6.0"
pytest = "6.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
