[tool.poetry]
name = "pytorch_tabnet"
version = "4.1.0"
description = "PyTorch implementation of TabNet"
homepage = "https://github.com/dreamquark-ai/tabnet"
repository = "https://github.com/dreamquark-ai/tabnet"
documentation = "https://github.com/dreamquark-ai/tabnet"
readme = "README.md"
authors = []
keywords = ["tabnet", "pytorch", "neural-networks" ]
exclude = ["tabnet/*.ipynb"]

[tool.poetry.dependencies]
python = ">=3.9"

numpy="*"
torch="*"
tqdm="*"
scikit_learn="*"
scipy="*"

[tool.poetry.dev-dependencies]
jupyter="*"
xgboost="*"
matplotlib="*"
wget="*"
pandas="*"
flake8="*"
sphinx = "*"
sphinx-rtd-theme = "*"
recommonmark = "*"
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
